@@ -1,6 +1,7 @@
 Changes
 examples/ex1.pl
 examples/ex2.pl
+examples/ex3.pl
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/AuthorTests.pm
