@@ -33,7 +33,7 @@ requires:
   Error::Pure: 0.15
   PYX::Parser: 0.05
   PYX::Utils: 0.01
-  Tags::Output::Raw: 0.04
+  Tags::Output::Raw: 0.1
   perl: 5.6.2
 resources:
   bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=PYX-SGML-Tags
