@@ -21,7 +21,7 @@ requires 'Class::Utils' => 0.05;
 requires 'Error::Pure' => 0.15;
 requires 'PYX::Parser' => 0.05;
 requires 'PYX::Utils' => 0.01;
-requires 'Tags::Output::Raw' => 0.04;
+requires 'Tags::Output::Raw' => 0.10;
 requires 'perl' => '5.6.2';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=PYX-SGML-Tags';
