@@ -19,6 +19,12 @@ METHODS
                      Input encoding.
                      Default value is 'utf-8'.
 
+            *       "input_tags_item_callback"
+
+                     Input 'Tags' item callback.
+                     This callback is for Tags::Output::* constructor parameter 'input_tags_item_callback'.
+                     Default value is undef.
+
             *       "tags"
 
                      Tags object.
@@ -123,6 +129,39 @@ EXAMPLE2
      print "\n";
 
      # Output:
+     # <element>data</element>
+
+EXAMPLE3
+     use strict;
+     use warnings;
+
+     use PYX::SGML::Tags;
+     use Tags::Output::Indent;
+
+     # Input.
+     my $pyx = <<'END';
+     (element
+     -data
+     )element
+     END
+
+     # Object.
+     my $obj = PYX::SGML::Tags->new(
+             'input_tags_item_callback' => sub {
+                     my $tags_ar = shift;
+                     print '[ '.$tags_ar->[0].' ]'."\n";
+                     return;
+             },
+     );
+
+     # Process.
+     $obj->parse($pyx);
+     print "\n";
+
+     # Output:
+     # [ b ]
+     # [ d ]
+     # [ e ]
      # <element>data</element>
 
 DEPENDENCIES
